--- a/app/src/main/res/layout/activity_discussion.xml
+++ b/app/src/main/res/layout/activity_discussion.xml
@@ -10,18 +10,369 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation">
+        android:layout_above="@id/bottom_navigation"
+        android:layout_marginTop="32dp">
 
         <TextView
+            android:id="@+id/header"
+            android:layout_marginStart="32dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Activity Discussion"
-            android:textSize="20sp"
+            android:fontFamily="@font/montserratbold"
+            android:text="Diskusi"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="44dp"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/header">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="32dp"
+                android:background="@drawable/background_blue"
+                android:paddingStart="12dp">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_search"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <EditText
+                    android:id="@+id/search_materi"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="36dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/montserratregular"
+                    android:hint="Cari Pertanyaan"
+                    android:inputType="text"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="196dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:background="@drawable/background_white"
+                        android:elevation="6dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="24dp"
+                        android:paddingVertical="16dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="8dp">
+
+                        <LinearLayout
+                            android:id="@+id/profile_asker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/profile_picture" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="12dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/montserratbold"
+                                    android:text="Muhammad Aufa Atha"
+                                    android:textColor="@color/black"
+                                    android:textSize="14sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:fontFamily="@font/montserratregular"
+                                    android:text="10 menit yang lalu"
+                                    android:textColor="#797979"
+                                    android:textSize="12sp" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="8dp"
+                            android:fontFamily="@font/montserratregular"
+                            android:textSize="14sp"
+                            android:textColor="#797979"
+                            android:text="Cara membedakan antara verb 1, verb 2, dan verb 3."
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/profile_asker"/>
+
+                        <FrameLayout
+                            android:layout_width="90dp"
+                            android:layout_height="40dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:background="@drawable/button_white_stroke_blue">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Lihat Diskusi"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/montserratregular"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"/>
+
+                        </FrameLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="196dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:background="@drawable/background_white"
+                        android:elevation="6dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="24dp"
+                        android:paddingVertical="16dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="8dp">
+
+                        <LinearLayout
+                            android:id="@+id/profile_asker2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/profile_picture" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="12dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/montserratbold"
+                                    android:text="Wilda Nurjannah"
+                                    android:textColor="@color/black"
+                                    android:textSize="14sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:fontFamily="@font/montserratregular"
+                                    android:text="39 menit yang lalu"
+                                    android:textColor="#797979"
+                                    android:textSize="12sp" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="8dp"
+                            android:fontFamily="@font/montserratregular"
+                            android:textSize="14sp"
+                            android:textColor="#797979"
+                            android:text="Macam-macam idiom dalam bahasa inggris."
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/profile_asker2"/>
+
+                        <FrameLayout
+                            android:layout_width="90dp"
+                            android:layout_height="40dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:background="@drawable/button_white_stroke_blue">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Lihat Diskusi"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/montserratregular"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"/>
+
+                        </FrameLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="196dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:background="@drawable/background_white"
+                        android:elevation="6dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="24dp"
+                        android:paddingVertical="16dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="8dp">
+
+                        <LinearLayout
+                            android:id="@+id/profile_asker3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/profile_picture" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="12dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/montserratbold"
+                                    android:text="Zidny Fiqha Aristoi"
+                                    android:textColor="@color/black"
+                                    android:textSize="14sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:fontFamily="@font/montserratregular"
+                                    android:text="1 hari yang lalu"
+                                    android:textColor="#797979"
+                                    android:textSize="12sp" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="8dp"
+                            android:fontFamily="@font/montserratregular"
+                            android:textSize="14sp"
+                            android:textColor="#797979"
+                            android:text="Menentukan main topic dari suatu paragraph."
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/profile_asker3"/>
+
+                        <FrameLayout
+                            android:layout_width="90dp"
+                            android:layout_height="40dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:background="@drawable/button_white_stroke_blue">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Lihat Diskusi"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/montserratregular"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"/>
+
+                        </FrameLayout>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <FrameLayout
+                android:layout_marginEnd="8dp"
+                android:layout_width="91dp"
+                android:layout_gravity="center"
+                android:background="@drawable/background_blue_light"
+                android:layout_height="25dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Buat Pertanyaan"
+                    android:textColor="@color/white"
+                    android:textSize="9sp"
+                    android:fontFamily="@font/montserratbold"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#08276D"
+                app:fabCustomSize="45dp"
+                app:tint="@null"
+                app:srcCompat="@drawable/ic_add"
+                android:scaleType="center"
+                android:elevation="3dp" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
