--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/imageView">
 
         <EditText
-            android:id="@+id/login_email"
+            android:id="@+id/send_email"
             android:layout_width="188dp"
             android:paddingEnd="12dp"
             android:layout_marginTop="24dp"
@@ -43,22 +43,6 @@
             android:inputType="textEmailAddress"
             android:background="@drawable/form_input"
             android:hint="Email"/>
-
-        <EditText
-            android:id="@+id/login_password"
-            android:layout_width="188dp"
-            android:paddingEnd="12dp"
-            android:fontFamily="@font/montserratregular"
-            android:textSize="14sp"
-            android:layout_marginTop="8dp"
-            android:layout_height="47dp"
-            android:inputType="textPassword"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_email"
-            android:paddingStart="12dp"
-            android:background="@drawable/form_input"
-            android:hint="Password"/>
 
     </LinearLayout>
 
@@ -73,7 +57,7 @@
         app:layout_constraintVertical_bias="0.18">
 
         <FrameLayout
-            android:id="@+id/login_button"
+            android:id="@+id/send_button"
             android:layout_width="188dp"
             android:layout_height="47dp"
             android:layout_marginTop="24dp"
@@ -84,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/montserratbold"
-                android:text="Login"
+                android:text="Kirim Email"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -103,7 +87,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -125,16 +110,31 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/reset_password"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/montserratbold"
-                android:text="Forgot Password?"
-                android:textColor="#9E8E8E"
-                android:textSize="9sp" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserratregular"
+                    android:text="Remembered your password?"
+                    android:textColor="#9E8E8E"
+                    android:textSize="9sp" />
+
+                <TextView
+                    android:id="@+id/login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:fontFamily="@font/montserratbold"
+                    android:text="Login"
+                    android:textColor="#9E8E8E"
+                    android:textSize="9sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
