--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/userphoto"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/add_photo"/>
+                    android:src="@drawable/profile_picture"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -42,6 +42,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Selamat Pagi,"
+                        android:textColor="#797979"
                         android:fontFamily="@font/montserratregular"
                         android:textSize="14sp"/>
 
@@ -66,9 +67,10 @@
                 android:layout_marginTop="32dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/goto_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/button_blue"
+                    android:background="@drawable/background_blue"
                     android:paddingStart="12dp">
 
                     <ImageView
@@ -193,9 +195,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:paddingHorizontal="20dp"
             android:paddingBottom="24dp"
-            android:layout_marginTop="67dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
