--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
             android:layout_width="188dp"
             android:fontFamily="@font/montserratregular"
             android:textSize="14sp"
+            android:paddingEnd="12dp"
             android:layout_marginTop="24dp"
             android:layout_gravity="center"
             android:layout_height="47dp"
@@ -68,6 +69,7 @@
             android:layout_width="188dp"
             android:fontFamily="@font/montserratregular"
             android:textSize="14sp"
+            android:paddingEnd="12dp"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"
             android:layout_height="47dp"
@@ -86,6 +88,7 @@
             android:textSize="14sp"
             android:layout_marginTop="8dp"
             android:layout_height="47dp"
+            android:paddingEnd="12dp"
             android:layout_gravity="center"
             android:inputType="textPassword"
             app:layout_constraintStart_toStartOf="parent"
