--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:onClick="closeKeyboard"
+    android:focusableInTouchMode="true"
+    android:clickable="true"
     android:background="@drawable/background_englishalert"
     android:layout_height="match_parent"
     tools:context=".activity.ChangePasswordActivity">
@@ -34,35 +38,15 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/old_password"
-        android:layout_width="match_parent"
-        android:fontFamily="@font/montserratregular"
-        android:textSize="14sp"
-        android:layout_marginTop="100dp"
-        android:layout_height="47dp"
-        android:textColor="#797979"
-        android:textColorHint="#A0A0A0"
-        android:layout_marginHorizontal="32dp"
-        android:paddingEnd="12dp"
-        android:layout_gravity="center"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_email"
-        android:paddingStart="12dp"
-        android:background="@drawable/form_input"
-        android:hint="Password Lama"/>
-
-    <EditText
+    <com.maksim88.passwordedittext.PasswordEditText
         android:id="@+id/new_password"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="32dp"
         android:fontFamily="@font/montserratregular"
         android:textSize="14sp"
-        android:textColor="#797979"
+        android:textColor="#505050"
         android:textColorHint="#A0A0A0"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:layout_height="47dp"
         android:paddingEnd="12dp"
         android:layout_gravity="center"
@@ -74,7 +58,7 @@
         android:background="@drawable/form_input"
         android:hint="Password Baru"/>
 
-    <EditText
+    <com.maksim88.passwordedittext.PasswordEditText
         android:id="@+id/confirm_password"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="32dp"
@@ -89,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_email"
         android:paddingStart="12dp"
-        android:textColor="#797979"
+        android:textColor="#505050"
         android:textColorHint="#A0A0A0"
         android:background="@drawable/form_input"
         android:hint="Konfirmasi Password Baru"/>
