--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -36,6 +36,8 @@
             android:layout_width="188dp"
             android:paddingEnd="12dp"
             android:layout_marginTop="24dp"
+            android:textColorHint="#A0A0A0"
+            android:textColor="#505050"
             android:fontFamily="@font/montserratregular"
             android:textSize="14sp"
             android:layout_height="47dp"
@@ -135,6 +137,17 @@
                     android:textSize="9sp" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/call_admin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/montserratbold"
+                android:text="Hubungi Admin"
+                android:textColor="#9E8E8E"
+                android:textSize="9sp" />
 
         </LinearLayout>
 
