--- a/app/src/main/res/drawable/background_blue.xml
+++ b/app/src/main/res/drawable/background_blue.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#012169"/>
+            <solid android:color="#2C4783"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
