--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:onClick="closeKeyboard"
+    android:focusableInTouchMode="true"
+    android:clickable="true"
     android:background="@drawable/background_englishalert"
     android:layout_height="match_parent"
     tools:context=".activity.ChangeProfileActivity">
@@ -34,13 +38,27 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/user_profile"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/change_picture"
         android:layout_width="80dp"
-        android:layout_marginTop="24dp"
         android:layout_height="80dp"
-        android:src="@drawable/profile_picture"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="24dp"
+        android:layout_gravity="center">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_profile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/profile_picture"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_camera"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/change_username"
@@ -48,7 +66,7 @@
         android:fontFamily="@font/montserratregular"
         android:textSize="14sp"
         android:paddingEnd="12dp"
-        android:textColor="#797979"
+        android:textColor="#505050"
         android:textColorHint="#A0A0A0"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
@@ -70,7 +88,7 @@
         android:paddingEnd="12dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="20dp"
-        android:textColor="#797979"
+        android:textColor="#505050"
         android:textColorHint="#A0A0A0"
         android:layout_gravity="center"
         android:layout_height="47dp"
