--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,15 +38,19 @@
             android:layout_marginTop="24dp"
             android:fontFamily="@font/montserratregular"
             android:textSize="14sp"
+            android:textColorHint="#A0A0A0"
+            android:textColor="#505050"
             android:layout_height="47dp"
             android:paddingStart="12dp"
             android:inputType="textEmailAddress"
             android:background="@drawable/form_input"
             android:hint="Email"/>
 
-        <EditText
+        <com.maksim88.passwordedittext.PasswordEditText
             android:id="@+id/login_password"
             android:layout_width="188dp"
+            android:textColorHint="#A0A0A0"
+            android:textColor="#505050"
             android:paddingEnd="12dp"
             android:fontFamily="@font/montserratregular"
             android:textSize="14sp"
